--- a/4.Square Bracket Notation/index.html
+++ b/4.Square Bracket Notation/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="mx-4 bg-red-900 text-white my-[67px] w-[30vw]">  <!--Here we use Square bracket notation for customizing your theme-->
+    <div class="mx-4 bg-red-900 text-white my-[67px] w-[30vw]">  <!--Here we use Square bracket notation for customizing our theme-->
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iusto praesentium porro voluptates excepturi autem qui, est perspiciatis sunt maxime hic? Natus nesciunt nam, omnis magnam accusamus odio corporis aliquam.
     </div>
 </body>
