--- a/7.@apply directive in Tailwind/index.html
+++ b/7.@apply directive in Tailwind/index.html
@@ -28,7 +28,11 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam consectetur esse possimus iste numquam quibusdam alias minus voluptates quas vel.
   <button type="button" class=" bg-pink-500 btn1">Yellow</button>
   <button type="button" class="bg-pink-500  btn2">Yellow</button>
+</div>
 
+    <div class="my-5 bg-red-900 text-white">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam consectetur esse possimus iste numquam quibusdam alias minus voluptates quas vel.
+  <button type="button" class="bg-blue-500 btn3">New</button>
 </div>
 </body>
 </html>
